# olio-ohjelmointi

./: README.md
H1/: main.cpp
H2A/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.h
H2B/: car.cpp  car.h  main.cpp
H3A/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
H3B/: CMakeLists.txt  animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
H4/: car.cpp  car.h  engine.cpp  main.cpp
H5/: classb.h  main.cpp
H6A/: myclass.cpp
H6B/: CMakeLists.txt  exampleclass.cpp  main.cpp
Testi/: CMakeLists.txt
Viikkokoe2/: CMakeLists.txt  myclass.h  vehicle.cpp
